--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ box-sizing: border-box;
 }
 
 body {
+text-align: center;  
 font-family: 'Merriweather', sans-serif;
 padding: 1em;
 }
@@ -81,10 +82,6 @@ box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 
 form textarea {
 height: 126px;
-}
-
-img {
-    align-self: center;
 }
 
 .half {
