--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ max-width: 600px;
 text-align: center;
 margin: 20px auto;
 }
+
+div{
+background-color: rgba(255, 255, 255, 0.25);
+}
+
+p{
+color: #3366ff;
+}
+
 form input, form textarea {
 border: 0;
 outline: 0;
