--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ margin: 20px auto;
 }
 
 div{
-background-color: rgba(255, 255, 255, 0.25);
+background-color: rgba(255, 255, 255, 0.6);
+width: fit-content;
 }
 
 p{
-color: #3366ff;
+color: #e74c3c;
 }
 
 form input, form textarea {
