--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ padding: 1em;
 }
 
 #noTreat {
-background-image: url('images/noTreatBackground.jpg');
+background-image: url('images/noTreatBackground.png');
 text-align: center;
 background-repeat: no-repeat;
 background-size: 100%, 100%;
