--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ padding: 1em;
 }
 
 h1 {
-background-color: rgba(255, 255, 255, 0.6);
+background-color: rgba(255, 255, 255, 0.4);
+width: fit-content;
 text-align: center;
 font-size: 500%;
 color: #3366ff;
