--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ width: fit-content;
 text-align: center;
 font-size: 500%;
 color: #3366ff;
-text-shadow: 1px 1px 0 #e1e1e1;
+text-shadow: 1px 1px 0 #bbbbbb;
 margin: auto;
 }
 
