--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ width: fit-content;
 text-align: center;
 font-size: 500%;
 color: #3366ff;
-text-shadow: 1px 1px 0 #bbbbbb;
+/*text-shadow: 1px 1px 0 #bbbbbb;*/
+ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 margin: auto;
 }
 
