--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ font-family: 'Merriweather', sans-serif;
 -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 resize: none;
+text-align: center;
+text-decoration: none;
 }
 
 form input:focus, form textarea:focus {
