--- a/style.css
+++ b/style.css
@@ -117,12 +117,12 @@ form input:focus, form textarea:focus, form button:focus {
 box-shadow: 0 0px 2px #e74c3c !important;
 }
 
-form .button {
+form #button {
 color: white;
 background: #e74c3c;
 cursor: pointer;
 }
-form .button:hover {
+form #button:hover {
 -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
