--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p{
 color: #e74c3c;
 }
 
-#form input, #form textarea {
+form input, form textarea {
 border: 0;
 outline: 0;
 padding: 1em;
@@ -111,24 +111,24 @@ resize: none;
 text-align: center;
 }
 
-#form input:focus, #form textarea:focus {
+form input:focus, form textarea:focus {
 -moz-box-shadow: 0 0px 2px #e74c3c !important;
 -webkit-box-shadow: 0 0px 2px #e74c3c !important;
 box-shadow: 0 0px 2px #e74c3c !important;
 }
 
-#form #input-submit {
+form #input-submit {
 color: white;
 background: #e74c3c;
 cursor: pointer;
 }
-#form #input-submit:hover {
+form #input-submit:hover {
 -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 }
 
-#form textarea {
+form textarea {
 height: 126px;
 }
 
