--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p{
 color: #e74c3c;
 }
 
-form input, form textarea {
+form input, form textarea, form button {
 border: 0;
 outline: 0;
 padding: 1em;
