--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p{
 color: #e74c3c;
 }
 
-form input, form textarea, form button {
+div input, div textarea, div button {
 border: 0;
 outline: 0;
 padding: 1em;
@@ -111,29 +111,29 @@ resize: none;
 text-align: center;
 }
 
-form input:focus, form textarea:focus {
+div input:focus, form textarea:focus {
 -moz-box-shadow: 0 0px 2px #e74c3c !important;
 -webkit-box-shadow: 0 0px 2px #e74c3c !important;
 box-shadow: 0 0px 2px #e74c3c !important;
 }
 
-form #input_submit {
+div #input_submit {
 color: white;
 background: #e74c3c;
 cursor: pointer;
 }
-form #input_submit:hover {
+div #input_submit:hover {
 -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 }
 
-form #input_create {
+div #input_create {
 color: white;
 background: #e74c3c;
 cursor: pointer;
 }
-form #input_create:hover {
+div #input_create:hover {
 -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
