--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ width: fit-content;
 margin: auto;
 }
 
+.back {
+
+}
+
 p{
 color: #e74c3c;
 }
@@ -134,6 +138,17 @@ background: #e74c3c;
 cursor: pointer;
 }
 div #input_create:hover {
+-moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+-webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+}
+
+div #input_account {
+color: white;
+background: #e74c3c;
+cursor: pointer;
+}
+div #input_account:hover {
 -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
 box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
