--- a/style.css
+++ b/style.css
@@ -90,6 +90,21 @@ margin: auto;
 }
 
 .back {
+border: 0;
+outline: 0;
+padding: 1em;
+-moz-border-radius: 8px;
+-webkit-border-radius: 8px;
+border-radius: 8px;
+display: block;
+width: 100%;
+margin-top: 1em;
+font-family: 'Merriweather', sans-serif;
+-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+resize: none;
+text-align: center;
 width: fit-content;
 color: white;
 background: #e74c3c;
