--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ box-sizing: border-box;
 body {
 font-family: 'Merriweather', sans-serif;
 padding: 1em;
+width: 100%;
+height: 100%;
 }
 
 #check {
