--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ background-repeat: no-repeat;
 background-size: 100%, 100%;
 font-family: 'Merriweather', sans-serif;
 padding: 1em;
+width: 100%;
+height: 100%;
 }
 
 #treat {
@@ -29,6 +31,8 @@ background-repeat: no-repeat;
 background-size: 100%, 100%;
 font-family: 'Merriweather', sans-serif;
 padding: 1em;
+width: 100%;
+height: 100%;
 }
 
 #noTreat {
@@ -38,6 +42,8 @@ background-repeat: no-repeat;
 background-size: 100%, 100%;
 font-family: 'Merriweather', sans-serif;
 padding: 1em;
+width: 100%;
+height: 100%;
 }
 
 #create {
@@ -47,6 +53,8 @@ background-repeat: no-repeat;
 background-size: 100%, 100%;
 font-family: 'Merriweather', sans-serif;
 padding: 1em;
+width: 100%;
+height: 100%;
 }
 
 html{
