--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ width: fit-content;
 margin: auto;
 }
 
-/*.back {
+.back {
 position: relative;
 border: 0;
 outline: 0;
@@ -109,7 +109,7 @@ background: #e74c3c;
 cursor: pointer;
 bottom: 5px;
 right: 5px;
-}*/
+}
 
 .back:hover {
 -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
