--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ padding: 1em;
 -webkit-border-radius: 8px;
 border-radius: 8px;
 display: block;
+width: 100%;
 margin-top: 1em;
 font-family: 'Merriweather', sans-serif;
 -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
